# gmock-demo

./: CMakeLists.txt  test.cpp
